--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -3118,7 +3118,7 @@ CONFIG_PACKAGE_uuid=y
 #
 # CONFIG_NODEJS_12 is not set
 # CONFIG_NODEJS_14 is not set
-CONFIG_NODEJS_16=y
+# CONFIG_NODEJS_16=y
 # CONFIG_NODEJS_18 is not set
 # end of Configuration
 
